force-app/main/default/objects/Project_Assignation__c/Project_Assignation__c.object-meta.xml
<CustomObject>
    <label>Project Assignation</label>
    <nameField>
        <displayFormat>PA-{0000}</displayFormat>
        <label>Project Assignation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Project Assignations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>