force-app/main/default/objects/Project_Assignation__c/fields/Assignation__c.field-meta.xml
<CustomField>
    <fullName>Assignation__c</fullName>
    <externalId>true</externalId>
    <label>Assignation</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>