force-app/main/default/objects/Project_Assignation__c/fields/AssignationC__c.field-meta.xml
<CustomField>
    <fullName>AssignationC__c</fullName>
    <label>Assignation</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Project Assignations</relationshipLabel>
    <relationshipName>Project_Assignations</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>