force-app/main/default/objects/Project_Assignation__c/fields/Contract__c.field-meta.xml
<CustomField>
    <fullName>Contract__c</fullName>
    <label>Assignations</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Project Assignations</relationshipLabel>
    <relationshipName>Project_Assignations</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>